Feature & Documentation: Implement user settings.
